data/all_generated_tests/raw_wast_tests/br_UnreachableCodeExecution_283.wast
;; 4. **Unwind Stack to Invalid Label:**    - Test Description: Construct a scenario where the operand stack is unwound incorrectly by the `br` instruction, targeting a non-existent or incorrect label, leading directly to an `unreachable` instruction.    - Constraint: This checks for proper operand stack management and label indexing.

(assert_invalid
  (module
    (func $unwind-stack-invalid-label
      (block
        (i32.const 42)
        (br 1)  ;; target label out of bounds
        (unreachable)
      )
    )
  )
  "unknown label"
)